# python_poo

./: makefile  readme.md
bib_funcao_postgree/src/funcao_postgree/: bd_postgree_funcionario.py
bib_sincronizacao_servidor_cliente/: pyproject.toml
cliente_and_server/: main_cliente.py  main_server.py  requirements.txt
cliente_and_server/src/func/: func_autenticacao.py  func_pedido.py  func_pedidos_desenvolvimento.py  func_produtos.py  sincronizacao.py
cliente_and_server/src/screen/: adicionar_product_ui.py  autenticacao.py  dialogo_efetivar_pedido.py  dialogo_exibir_pedido.py  editar_produto_ui.py  home_cliente_ui.py  tela_principal_server_ui.py
cliente_and_server/src/screen/ui/: add_product.ui  autenticacao.ui  diago_inserir.ui  editar_product.ui  exibir_pedido.ui  home.ui  tela_editar_pedido.ui  tela_principal_server.ui
